# CancerVision

./: .env_example  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  README.md  clean_slurm.slurm  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  run_slurm.slurm  test_mapping.py  test_maps.py  test_maps_mock.py
.github/workflows/: ci.yml
docs/manuals/: inference-setup.md  ml-lifecycle-setup.md  performance.md  web-interface.md
frontend/: index.html
frontend/src/: App.tsx
reference/src/: index.html
res/: README.md
res/classification/: classifier_registry.json
res/configs/: training_registry.json
res/models/: best_metric_model.pth  model_registry.json
scripts/: merge_standardized_manifests.py  rebuild_segmentation_pipeline.ps1  rebuild_segmentation_pipeline.sh  run_2xa100.sh  run_smoke.sh  run_vast.sh  synthstrip_docker.py  train_brats.sbatch  train_dynnet.sbatch
search/: search_index.json
src/: classification.ipynb  identifier.py  inference.py  monai_tutorial.py  pipeline.py  test.py  unet_evaluation_array.py  unet_evaluation_dict.py  unet_training_dict.py
src/classification/: __init__.py  classifier_registry.py  classify.py  rules.py  train_classifier.py
src/classifier/: __init__.py  base.py  heuristic.py  torch_classifier.py
src/core/: __init__.py  checkpointing.py  runtime.py
src/data/: __init__.py  discovery.py  preprocess.py  registry.py
src/datasets/: __init__.py  brats.py  brats_h5.py  brats_paths.py  brats_transforms.py
src/inference/: __init__.py  architectures.py  infer_segmentation_3d.py  inference.py  model_registry.py  pipeline.py  (+2 more)
tests/: test_adapter_capabilities.py  test_brats_adapter_inference_paths.py  test_brats_paths.py  test_checkpointing.py  test_data_discovery.py  test_dynnet.py  test_dynnet_runtime.py  test_example.py  test_fused_dice.py  test_ixi_adapter_inference_paths.py  test_preprocessing.py  test_segmentation_registry.py  test_standardize_brain_structure.py  test_train_brats_distributed.py  test_train_dynnet_script.py  test_web_visualization.py
wandb/: latest-run
(+172 files in other folders)
