[project]
name = "Cancervision"
version = "0.1.0"
requires-python = "==3.13.*"
dependencies = [
    "monai",
    "torch",
    "torchvision",
    "numpy",
    "scikit-learn",
    "wandb",
    "tensorboard>=2.20.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
  { index = "pytorch-cu130", marker = "sys_platform == 'win32'" }
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
  { index = "pytorch-cu130", marker = "sys_platform == 'win32'" }
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
